--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# OS generated files #
-######################
 .DS_Store
 .DS_Store?
 ._*
@@ -8,3 +6,5 @@
 Icon?
 ehthumbs.db
 Thumbs.db
+/node_modules
+/npm-debug.log
