--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     },
     "devDependencies": {
         "grunt": "~0.4.1",
+        "grunt-bumpup": "0.4.2",
         "grunt-cli": "~0.1",
-        "grunt-bumpup": "0.3.1",
-        "grunt-tagrelease": "0.2.1",
-        "grunt-contrib-compress": "0.5.2"
+        "grunt-contrib-compress": "0.5.2",
+        "grunt-tagrelease": "0.2.1"
     },
     "keywords": [
         "textpattern",
