--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,15 @@
 {
     "name": "textpattern-branding",
     "version": "0.0.0",
-    "author": "The Textpattern Development Team"
+    "description": "Textpattern branding resources",
+    "homepage": "https://github.com/textpattern/textpattern-branding",
+    "authors": [
+        "Team Textpattern <contact@textpattern.com>"
+    ],
+    "keywords": [
+        "textpattern",
+        "cms",
+        "brand",
+        "resources"
+    ]
 }
