--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# OS generated files #
+######################
 .DS_Store
 .DS_Store?
 ._*
@@ -6,7 +8,3 @@
 Icon?
 ehthumbs.db
 Thumbs.db
-/node_modules
-/npm-debug.log
-/src
-/dist
