--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-    "name": "textpattern-branding",
-    "version": "0.0.0",
-    "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-bumpup": "0.6.2",
-        "grunt-cli": "~0.1",
-        "grunt-contrib-compress": "0.12.0",
-        "grunt-tagrelease": "0.3.3"
-    }
+  "name": "textpattern-branding",
+  "description": "The Textpattern brand image assets.",
+  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/textpattern/textpattern-branding.git"
+  },
+  "bugs": {
+    "url": "https://github.com/textpattern/textpattern-branding/issues"
+  }
+  "license": "MIT"
 }
